<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">BookStoreInventoryApp</string>

    <!-- Exception if developer is trying to get instance of static BooksInventoryContract class  [CHAR LIMIT=None] -->
    <string name="util_exception_instantiation">Utils class can not be instantiated</string>

    <!-- Label for price in catalog activity [CHAR LIMIT=12] -->
    <string name="price">Price: $</string>

    <!-- Label for quantity in catalog activity [CHAR LIMIT=12] -->
    <string name="quantity">Quantity: </string>

    <!-- Label for reduce price button in details activity [CHAR LIMIT=12] -->
    <string name="reduce_price">-1 price</string>

    <!-- Label for add price button in details activity [CHAR LIMIT=12] -->
    <string name="add_price">+1 price</string>

    <!-- Label for reduce quantity button in details activity [CHAR LIMIT=12] -->
    <string name="reduce_item">-1 item</string>

    <!-- Label for add quantity button in details activity [CHAR LIMIT=12] -->
    <string name="add_item">+1 item</string>

    <!-- Label for supplier label in details activity [CHAR LIMIT=12] -->
    <string name="suppler">Supplier:</string>

    <!-- Label for supplier phone label in details activity [CHAR LIMIT=12] -->
    <string name="suppler_phone">Supplier phone:</string>

    <!-- Title for details activity in case of adding new book mode [CHAR LIMIT=None] -->
    <string name="add_book_title">Add new book</string>

    <!-- Title for details activity in case of editing book mode [CHAR LIMIT=None] -->
    <string name="details_book_title">Book details</string>

    <!-- Hint for add book name field in details activity [CHAR LIMIT=20] -->
    <string name="book_name_edit_text_hint">Enter book name</string>

    <string name="price_edit_text_hint">0.00</string>
    <string name="quantity_edit_text_hint">0</string>

    <!-- Hint for add supplier name field in details activity [CHAR LIMIT=20] -->
    <string name="supplier_edit_text_hint">Enter supplier name</string>

    <!-- Hint for add supplier phone field in details activity [CHAR LIMIT=20] -->
    <string name="supplier_phone_edit_text_hint">Enter supplier phone</string>

    <!-- Save menu label in details activity [CHAR LIMIT=10] -->
    <string name="action_save">Save</string>

    <!-- Delete menu label in details activity [CHAR LIMIT=10] -->
    <string name="action_delete">Delete</string>

    <!-- Toast when failed to insert new book to data base [CHAR LIMIT=None] -->
    <string name="insert_book_failed">Adding new book failed</string>

    <!-- Toast when successed inserting new book to data base [CHAR LIMIT=None] -->
    <string name="insert_book_successful">Adding new book successful</string>

    <!-- Toast when successed updating new book to data base [CHAR LIMIT=None] -->
    <string name="update_book_successful">Updating book was successful</string>

    <!-- Toast when failed updating new book to data base [CHAR LIMIT=None] -->
    <string name="update_book_failed">Updating book was failed</string>

    <!-- Toast when failed deleting the book from data base [CHAR LIMIT=None] -->
    <string name="delete_book_failed">Deleting book was failed</string>

    <!-- Toast when deleting the book from data base is successed[CHAR LIMIT=None] -->
    <string name="delete_book_successful">Deleting book was successful</string>

    <!-- Toast message when reducing quantity of books in stock by selling one is failed [CHAR LIMIT=None] -->
    <string name="reducing_quantity_failed">Reducing quantity failed</string>

    <!-- Toast message when reducing quantity of books in stock by selling one is successed [CHAR LIMIT=None] -->
    <string name="reducing_quantity_success">Book sold</string>

    <!-- Dialog message confirming deleting book [CHAR LIMIT=None] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Delete button label in deleting dialog [CHAR LIMIT=10] -->
    <string name="delete">Delete</string>

    <!-- Cancel button label in deleting dialog [CHAR LIMIT=10] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message when user input more then 2 decimal place value in price field of DetailsActivity [CHAR LIMIT=None] -->
    <string name="more_than_two_decimal_places_in_price_toast">Price can\'t has more than two decimal places. It will be rounded</string>

    <!--Prefix in price text view in list item [CHAR LIMIT=20]-->
    <string name="price_prefix">price: $</string>

    <!--Prefix in quantity text view in list item [CHAR LIMIT=20]-->
    <string name="quantity_prefix">quantity:\ </string>

    <!--Toast message if the book is out of stock [CHAR LIMIT=None]-->
    <string name="out_of_stock_toast">Book is out of stock</string>

    <!--Button label sell item in catalog activity [CHAR LIMIT=10]-->
    <string name="sell_button_label">sell</string>

    <!--Suggestion to add new books into inventory if it is empty [CHAR LIMIT=None]-->
    <string name="empty_view_label">Please, press floating button in the corner to add books in the inventory</string>

    <!--Button label sell item in catalog activity [CHAR LIMIT=None]-->
    <string name="catalog_title">Books inventory catalog</string>

    <!--Prompt when book name is not filled [CHAR LIMIT=None]-->
    <string name="book_needs_name_prompt">Please, fill book name before saving</string>

    <!--Prompt when book price is not filled [CHAR LIMIT=None]-->
    <string name="book_needs_price_prompt">Please, fill book price before saving</string>

    <!--Prompt when book quantity is not filled [CHAR LIMIT=None]-->
    <string name="book_needs_quantity_prompt">Please, fill book quantity before saving</string>

    <!--Prompt when book supplier is not filled [CHAR LIMIT=None]-->
    <string name="book_needs_supplier_prompt">Please, fill book\'s supplier before saving</string>

    <!--Prompt when supplier phone number is not filled [CHAR LIMIT=None]-->
    <string name="book_needs_supplier_phone_number_prompt">Please, fill supplier\'s phone number before saving</string>





</resources>