<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/double_margin"
        android:layout_marginStart="@dimen/double_margin"
        android:layout_marginTop="@dimen/regular_margin"
        android:hint="@string/book_name_edit_text_hint"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="@+id/price_edit_text"
        app:layout_constraintStart_toStartOf="@+id/name_edit_text"
        app:layout_constraintTop_toTopOf="@+id/price_edit_text" />

    <EditText
        android:id="@+id/price_edit_text"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_margin"
        android:layout_marginTop="@dimen/double_margin"
        android:ems="10"
        android:hint="@string/price_edit_text_hint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/price_label_text_view"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

    <Button
        android:id="@+id/reduce_price_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reduce_price"
        app:layout_constraintEnd_toStartOf="@+id/add_price_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/price_edit_text"
        app:layout_constraintTop_toTopOf="@+id/price_edit_text" />

    <Button
        android:id="@+id/add_price_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_price"
        app:layout_constraintEnd_toEndOf="@+id/name_edit_text"
        app:layout_constraintStart_toEndOf="@+id/reduce_price_button"
        app:layout_constraintTop_toTopOf="@+id/reduce_price_button" />

    <TextView
        android:id="@+id/quantity_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="@+id/quantity_edit_text"
        app:layout_constraintStart_toStartOf="@+id/price_label_text_view"
        app:layout_constraintTop_toTopOf="@+id/quantity_edit_text" />

    <EditText
        android:id="@+id/quantity_edit_text"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_margin"
        android:layout_marginTop="@dimen/double_margin"
        android:ems="10"
        android:hint="@string/quantity_edit_text_hint"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/quantity_label_text_view"
        app:layout_constraintTop_toBottomOf="@+id/price_edit_text" />

    <Button
        android:id="@+id/reduce_quantity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reduce_item"
        app:layout_constraintEnd_toEndOf="@+id/reduce_price_button"
        app:layout_constraintStart_toStartOf="@+id/reduce_price_button"
        app:layout_constraintTop_toTopOf="@+id/quantity_edit_text" />

    <Button
        android:id="@+id/add_quantity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        app:layout_constraintEnd_toEndOf="@+id/add_price_button"
        app:layout_constraintStart_toStartOf="@+id/add_price_button"
        app:layout_constraintTop_toTopOf="@+id/reduce_quantity_button" />

    <TextView
        android:id="@+id/supplier_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suppler"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="@+id/supplier_edit_text"
        app:layout_constraintStart_toStartOf="@+id/quantity_label_text_view"
        app:layout_constraintTop_toTopOf="@+id/supplier_edit_text" />

    <EditText
        android:id="@+id/supplier_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_margin"
        android:layout_marginTop="@dimen/regular_margin"
        android:ems="10"
        android:hint="@string/supplier_edit_text_hint"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintEnd_toEndOf="@+id/name_edit_text"
        app:layout_constraintStart_toEndOf="@+id/supplier_label_text_view"
        app:layout_constraintTop_toBottomOf="@+id/quantity_edit_text" />

    <TextView
        android:id="@+id/supplier_phone_number_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suppler_phone"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="@+id/supplier_phone_number_edit_text"
        app:layout_constraintStart_toStartOf="@+id/supplier_label_text_view"
        app:layout_constraintTop_toTopOf="@+id/supplier_phone_number_edit_text" />

    <EditText
        android:id="@+id/supplier_phone_number_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_margin"
        android:layout_marginTop="@dimen/double_margin"
        android:ems="10"
        android:hint="@string/supplier_phone_edit_text_hint"
        android:inputType="phone"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/supplier_phone_number_title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/supplier_edit_text" />

    <Button
        android:id="@+id/button"
        android:layout_width="34dp"
        android:layout_height="31dp"
        android:background="@drawable/call_icon"
        android:onClick="callSupplier"
        app:layout_constraintBottom_toBottomOf="@+id/supplier_phone_number_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/supplier_edit_text"
        app:layout_constraintTop_toTopOf="@+id/supplier_phone_number_edit_text" />
</android.support.constraint.ConstraintLayout>